--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,12 +1,32 @@
-apiVersion: networking.k8s.io/v1
-kind: Ingress
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   labels:
+#     app: nginxhello
+#   name: single-default-backend-ingress
+#   annotations:
+#     fluxcd.io/ignore: "false"
+# spec:
+#   backend:
+#     serviceName: nginxhello
+#     servicePort: 80
+--- 
+apiVersion: networking.k8s.io/v1   
+kind: Ingress   
 metadata:
   labels:
     app: nginxhello
   name: single-default-backend-ingress
   annotations:
-    fluxcd.io/ignore: "false"
-spec:
-  backend:
-    serviceName: nginxhello
-    servicePort: 80
+    fluxcd.io/ignore: "false"  
+spec: 
+  rules:
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nginxhello
+                port:
+                  number: 80
