--- a/ingress.yaml
+++ b/ingress.yaml
@@ -18,7 +18,7 @@ metadata:
     app: nginxhello
   name: single-default-backend-ingress
   annotations:
-    fluxcd.io/ignore: "false"  
+    fluxcd.io/ignore: "true"  
 spec: 
   rules:
     - http:
