--- a/helm/nginxhello-hr.yaml
+++ b/helm/nginxhello-hr.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginxhello-hr
   namespace: default
   annotations:
-    fluxcd.io/ignore: "true"
+    fluxcd.io/ignore: "false"
 spec:
   chart:
     git: ssh://git@github.com:rozdolsky33/gitops-nginxhello.git
