--- a/helm/nginxhello-hr.yaml
+++ b/helm/nginxhello-hr.yaml
@@ -7,7 +7,7 @@ metadata:
     fluxcd.io/ignore: "false"
 spec:
   chart:
-    git: ssh://git@github.com:rozdolsky33/gitops-nginxhello.git
+    git: ssh://git@github.com/rozdolsky33/gitops-nginxhello.git
     path: helm/chart
     ref: master
   rollback:
