--- a/canaries/nginxhello-canary.yaml
+++ b/canaries/nginxhello-canary.yaml
@@ -12,7 +12,7 @@ spec:
     kind: Deployment
     name: default-nginxhello-hr
   ingressRef:
-    apiVersion: networking.k8s.io/v1beta1
+    apiVersion: networking.k8s.io/v1
     kind: Ingress
     name: default-nginxhello-hr
   progressDeadlineSeconds: 180
