--- a/helm/chart/templates/ingress.yaml
+++ b/helm/chart/templates/ingress.yaml
@@ -1,21 +1,42 @@
-{{- if .Values.ingress.enabled -}}
-{{- $fullName := include "nginxhello.fullname" . -}}
-{{- $svcPort := .Values.service.port -}}
-{{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1
-{{- else -}}
-apiVersion: extensions/v1
-{{- end }}
-kind: Ingress
+# {{- if .Values.ingress.enabled -}}
+# {{- $fullName := include "nginxhello.fullname" . -}}
+# {{- $svcPort := .Values.service.port -}}
+# {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+# apiVersion: networking.k8s.io/v1
+# {{- else -}}
+# apiVersion: extensions/v1
+# {{- end }}
+# kind: Ingress
+# metadata:
+#   name: {{ $fullName }}
+#   labels:
+#     {{- include "nginxhello.labels" . | nindent 4 }}
+#   {{- with .Values.ingress.annotations }}
+#   annotations:
+#     {{- toYaml . | nindent 4 }}
+#   {{- end }}
+# spec:
+#   rules:
+#     - http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: {{ $fullName }}
+#                 port: 
+#                   number: {{ $svcPort }}
+# {{- end }}
+---
+apiVersion: networking.k8s.io/v1   
+kind: Ingress   
 metadata:
-  name: {{ $fullName }}
   labels:
-    {{- include "nginxhello.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
+    app: nginxhello
+  name: single-default-backend-ingress
   annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
-spec:
+    fluxcd.io/ignore: "true"  
+spec: 
   rules:
     - http:
         paths:
@@ -23,7 +44,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ $fullName }}
-                port: 
-                  number: {{ $svcPort }}
-{{- end }}
+                name: nginxhello
+                port:
+                  number: 80
