--- a/helm/chart/templates/ingress.yaml
+++ b/helm/chart/templates/ingress.yaml
@@ -1,43 +1,10 @@
-# {{- if .Values.ingress.enabled -}}
-# {{- $fullName := include "nginxhello.fullname" . -}}
-# {{- $svcPort := .Values.service.port -}}
-# {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-# apiVersion: networking.k8s.io/v1
-# {{- else -}}
-# apiVersion: extensions/v1
-# {{- end }}
-# kind: Ingress
-# metadata:
-#   name: {{ $fullName }}
-#   labels:
-#     {{- include "nginxhello.labels" . | nindent 4 }}
-#   {{- with .Values.ingress.annotations }}
-#   annotations:
-#     {{- toYaml . | nindent 4 }}
-#   {{- end }}
-# spec:
-#   rules:
-#     - http:
-#         paths:
-#           - path: /
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: {{ $fullName }}
-#                 port: 
-#                   number: {{ $svcPort }}
-# {{- end }}
----
-
-IntelliJ IDEA
-
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "nginxhello.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
 {{- if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
-apiVersion: networking.k8s.io/v1
+apiVersion: networking.k8s.io/v1beta1
 {{- else -}}
-apiVersion: extensions/v1
+apiVersion: extensions/v1beta1
 {{- end }}
 kind: Ingress
 metadata:
